2025 cleanup (#7)
* Initial cleaning

* Updated PhotonLib version

* It builds now at least... (Why did I join programming?)

* Added javadoc

* Updated TRIGONLib and implemented HardwareStats changes

* Fixed autoStartPose calculation

* Reworked RobotConstants and minor cleaning except for PP stuff

* Oopsie 🤭;

* Cleaned get auto start pose

* Maybe implemented new pp stuff?

* this looks more right (still need to test though, and what on earth is dt?)

* I have to commit even though I'm not done. Added camera sim

* Added Camera Sim

* Updated TRIGONLib

* Minor cleaning

* More minor cleaning

* Cleaned `LEDAutoSetup`

* Copied TRIGONLib vendordep files

* Update FieldConstants.java

* Fixed "that" problem...

* There's still problems...

* Cleaning - PP

* Delete settings.json

* Create settings.json

* All errors fixed

* fixed your error @Strflightmight09

* thing

* implemented LEDs update

* removed useless comment

* Fixed LEDAutoSetup stuff

* Refactor

* fixed mirrorable issue

* init

* Lots of fixes

* Updated TRIGONLib

* Fixed javadoc and deprecated method

* Reworked PathPlanner stuff

* Switched to normal vendordeps

* Fixed some random thing that does nothing

* Minor cleaning / fixes

* Added object detection camera (NOT CLEANED YET)

* Cleaned ObjectDetectionCamera

* A bit of cleaning and jdocs

* Added javadocs and slightly cleaned `SimulationObjectDetectionCameraIO`

* Fixed bug and added option for auto feedforwards

* Update build.gradle

* Javadoc and PP stuff

* Small jdoc + AutoCommands

* Mostly Jdocs.....

* Minor jdoc fix

* Top 5 horse

* heldObject+=[]

* Added PP FF

* `and configurations`

* Implemented feedforward for PP

* JDOCS

* Fixed error

* Javadoc

---------

Co-authored-by: Nummun14 <142012009+Nummun14@users.noreply.github.com>